--- a/task-04.html
+++ b/task-04.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="/index.html">Головна</a>
+    <a href="../index.html">Головна</a>
     <div id="counter">
       <button type="button" data-action="decrement">-1</button>
       <span id="value">0</span>
       <button type="button" data-action="increment">+1</button>
     </div>
-    <a href="/task-03.html">До task-03</a>
-    <a href="/task-05.html">До task-05</a>
+    <a href="../task-03.html">До task-03</a>
+    <a href="../task-05.html">До task-05</a>
     <script src="../js/task-04.js" type="module"></script>
   </body>
 </html>
