--- a/task-07.html
+++ b/task-07.html
@@ -13,8 +13,8 @@
     <br />
     <span id="text">Abracadabra!</span>
     <script src="../js/task-07.js" type="module"></script>
-    <a href="/task-06.html">До task-06</a>
-    <a href="/task-08.html">До task-08</a>
+    <a href="../task-06.html">До task-06</a>
+    <a href="../task-08.html">До task-08</a>
     
   </body>
 </html>
