--- a/task-02.html
+++ b/task-02.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/hw-06.css"/>
   </head>
   <body>
-    <a href="/index.html">Головна</a>
+    <a href="../index.html">Головна</a>
     <ul id="ingredients"></ul>
-    <a href="/task-01.html">До task-01</a>
-    <a href="/task-03.html">До task-03</a>
+    <a href="../task-01.html">До task-01</a>
+    <a href="../task-03.html">До task-03</a>
     <script src="../js/task-02.js" type="module"></script>
   </body>
 </html>
