--- a/task-05.html
+++ b/task-05.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="/index.html">Головна</a>
+    <a href="../index.html">Головна</a>
     <input type="text" id="name-input" placeholder="Please enter your name" />
     <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
-    <a href="/task-04.html">До task-04</a>
-    <a href="/task-06.html">До task-06</a>
+    <a href="../task-04.html">До task-04</a>
+    <a href="../task-06.html">До task-06</a>
     <script src="../js/task-05.js" type="module"></script>
   </body>
 </html>
