--- a/task-06.html
+++ b/task-06.html
@@ -15,8 +15,8 @@
   data-length="6"
   placeholder="Please enter 6 symbols"
 />
-<a href="/task-05.html">До task-05</a>
-<a href="/task-07.html">До task-07</a>
+<a href="../task-05.html">До task-05</a>
+<a href="../task-07.html">До task-07</a>
     <script src="../js/task-06.js" type="module"></script>
     
   </body>
