--- a/task-05.html
+++ b/task-05.html
@@ -13,6 +13,6 @@
     <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
     <a href="../task-04.html">До task-04</a>
     <a href="../task-06.html">До task-06</a>
-    <script src="../js/task-05.js" type="module"></script>
+    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
   </body>
 </html>
