--- a/task-07.html
+++ b/task-07.html
@@ -15,6 +15,6 @@
     
     <a href="../task-06.html">До task-06</a>
     <a href="../task-08.html">До task-08</a>
-    <script src="../js/task-07.js" type="module"></script>
+    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
   </body>
 </html>
