--- a/task-10.html
+++ b/task-10.html
@@ -24,6 +24,6 @@
         <a href="../task-01.html">До task-01</a>
       </li>
     </ul>
-    <script src="../js/task-10.js" type="module"></script>
+    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
   </body>
 </html>
