--- a/task-01.html
+++ b/task-01.html
@@ -39,6 +39,6 @@
       </li>
     </ul>
     <a href="../task-02.html">До task-02</a>
-    <script src="../js/task-01.js" type="module"></script>
+    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
   </body>
 </html>
