--- a/task-06.html
+++ b/task-06.html
@@ -17,6 +17,6 @@
 />
 <a href="../task-05.html">До task-05</a>
 <a href="../task-07.html">До task-07</a>
-    <script src="../js/task-06.js" type="module"></script>  
+    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>  
   </body>
 </html>
