--- a/task-02.html
+++ b/task-02.html
@@ -12,6 +12,6 @@
     <ul id="ingredients"></ul>
     <a href="../task-01.html">До task-01</a>
     <a href="../task-03.html">До task-03</a>
-    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
+    <script src="../js/task-02.js"></script>
   </body>
 </html>
