--- a/task-04.html
+++ b/task-04.html
@@ -16,6 +16,6 @@
     </div>
     <a href="../task-03.html">До task-03</a>
     <a href="../task-05.html">До task-05</a>
-    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
+     <script src="../js/task-04.js"></script>
   </body>
 </html>
