--- a/task-07.html
+++ b/task-07.html
@@ -12,9 +12,9 @@
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
     <span id="text">Abracadabra!</span>
-    
+
     <a href="../task-06.html">До task-06</a>
     <a href="../task-08.html">До task-08</a>
-    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
+    <script src="../js/task-07.js"></script>
   </body>
 </html>
