--- a/task-08.html
+++ b/task-08.html
@@ -22,6 +22,6 @@
 </form>
 <a href="../task-07.html">До task-07</a>
 <a href="../task-09.html">До task-09</a>
-    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
+    <script src="../js/task-08.js"></script>
   </body>
 </html>
