--- a/task-03.html
+++ b/task-03.html
@@ -12,6 +12,6 @@
     <ul class="gallery"></ul>
     <a href="../task-02.html">До task-02</a>
     <a href="../task-04.html">До task-04</a>
-    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
+    <script src="../js/task-03.js"></script>
   </body>
 </html>
