--- a/task-09.html
+++ b/task-09.html
@@ -15,6 +15,6 @@
 </div>
 <a href="../task-08.html">До task-08</a>
 <a href="../task-10.html">До task-10</a>
-    <script src="../goit-js-hw-06/js/task-10.js" type="module"></script>
+    <script src="../js/task-09.js"></script>
   </body>
 </html>
