--- a/task-01.html
+++ b/task-01.html
@@ -38,7 +38,7 @@
         </ul>
       </li>
     </ul>
-    <a href="../task-02.html">До task-02</a>
+    <a href="/">До task-02</a>
     <script src="../js/task-01.js"></script>
   </body>
 </html>
