--- a/task-04.html
+++ b/task-04.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="../index.html">Головна</a>
+    <a href="/">Головна</a>
     <div id="counter">
       <button type="button" data-action="decrement">-1</button>
       <span id="value">0</span>
