--- a/task-05.html
+++ b/task-05.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="../index.html">Головна</a>
+    <a href="/">Головна</a>
     <input type="text" id="name-input" placeholder="Please enter your name" />
     <h1>Hello, <span id="name-output">Anonymous</span>!</h1>
     <a href="../task-04.html">До task-04</a>
