--- a/task-09.html
+++ b/task-09.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="/index.html">Головна</a>
+    <a href="/">Головна</a>
 <div class="widget">
   <p>Background color: <span class="color">-</span></p>
   <button type="button" class="change-color">Change color</button>
