--- a/task-10.html
+++ b/task-10.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="../index.html">Головна</a>
+    <a href="/">Головна</a>
     <div id="controls">
       <input type="number" min="1" max="100" step="1" />
       <button type="button" data-create>Create</button>
