--- a/task-03.html
+++ b/task-03.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="/">Головна</a>
+    <a href="index.html">Головна</a>
     <ul class="gallery"></ul>
-    <a href="../task-02.html">До task-02</a>
-    <a href="../task-04.html">До task-04</a>
-    <script src="../js/task-03.js"></script>
+    <a href="task-02.html">До task-02</a>
+    <a href="task-04.html">До task-04</a>
+    <script src="js/task-03.js" type="module"></script>
   </body>
 </html>
