--- a/task-07.html
+++ b/task-07.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="/">Головна</a>
+    <a href="index.html">Головна</a>
     <input id="font-size-control" type="range" min="16" max="96" />
     <br />
     <span id="text">Abracadabra!</span>
 
-    <a href="../task-06.html">До task-06</a>
-    <a href="../task-08.html">До task-08</a>
-    <script src="../js/task-07.js"></script>
+    <a href="task-06.html">До task-06</a>
+    <a href="task-08.html">До task-08</a>
+    <script src="js/task-07.js" type="module"></script>
   </body>
 </html>
