--- a/task-08.html
+++ b/task-08.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="/">Головна</a>
+    <a href="index.html">Головна</a>
 <form class="login-form">
   <label>
     Email
@@ -20,8 +20,8 @@
   </label>
   <button type="submit">Login</button>
 </form>
-<a href="../task-07.html">До task-07</a>
-<a href="../task-09.html">До task-09</a>
-    <script src="../js/task-08.js"></script>
+<a href="task-07.html">До task-07</a>
+<a href="task-09.html">До task-09</a>
+    <script src="js/task-08.js" type="module"></script>
   </body>
 </html>
