--- a/task-09.html
+++ b/task-09.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="/">Головна</a>
+    <a href="index.html">Головна</a>
 <div class="widget">
   <p>Background color: <span class="color">-</span></p>
   <button type="button" class="change-color">Change color</button>
 </div>
-<a href="../task-08.html">До task-08</a>
-<a href="../task-10.html">До task-10</a>
-    <script src="../js/task-09.js"></script>
+<a href="task-08.html">До task-08</a>
+<a href="task-10.html">До task-10</a>
+    <script src="js/task-09.js" type="module"></script>
   </body>
 </html>
