--- a/task-01.html
+++ b/task-01.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="/index.html">Головна</a>
+    <a href="index.html">Головна</a>
     <ul id="categories">
       <li class="item">
         <h2>Animals</h2>
@@ -39,6 +39,6 @@
       </li>
     </ul>
     <a href="/">До task-02</a>
-    <script src="../js/task-01.js"></script>
+   <script src="js/task-01.js" type="module"></script>
   </body>
 </html>
