--- a/task-06.html
+++ b/task-06.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="css/hw-06.css"/>
   </head>
   <body>
-    <a href="/">Головна</a>
+    <a href="index.html">Головна</a>
     <input
   type="text"
   id="validation-input"
   data-length="6"
   placeholder="Please enter 6 symbols"
 />
-<a href="../task-05.html">До task-05</a>
-<a href="../task-07.html">До task-07</a>
-    <script src="../js/task-06.js"></script>
+<a href="task-05.html">До task-05</a>
+<a href="task-07.html">До task-07</a>
+    <script src="js/task-06.js" type="module"></script>
 </html>
