--- a/task-10.html
+++ b/task-10.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="/">Головна</a>
+    <a href="index.html">Головна</a>
     <div id="controls">
       <input type="number" min="1" max="100" step="1" />
       <button type="button" data-create>Create</button>
@@ -18,12 +18,12 @@
     <div id="boxes"></div>
     <ul>
       <li>
-        <a href="../task-09.html">До task-09</a>
+        <a href="task-09.html">До task-09</a>
       </li>
       <li>
-        <a href="../task-01.html">До task-01</a>
+        <a href="task-01.html">До task-01</a>
       </li>
     </ul>
-    <script src="../js/task-10.js"></script>
+    <script src="js/task-10.js" type="module"></script>
   </body>
 </html>
