--- a/task-01.html
+++ b/task-01.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="index.html">Головна</a>
+    <p><a href="index.html">Go back</a></p>
     <ul id="categories">
       <li class="item">
         <h2>Animals</h2>
