--- a/task-03.html
+++ b/task-03.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="index.html">Головна</a>
+   <p><a href="index.html">Go back</a></p>
     <ul class="gallery"></ul>
     <a href="task-02.html">До task-02</a>
     <a href="task-04.html">До task-04</a>
