--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hw-06 Головна</title>
+    <title>Homework 6</title>
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
@@ -25,7 +25,5 @@
       <li><a href="task-10.html">Task 10</a></li>
     </ul>
 
-    <script src="../js/snow.js"></script>
-    <script src="../goit-js-hw-06/js/anime/anime.js" type="module"></script>
   </body>
 </html>
