--- a/task-02.html
+++ b/task-02.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="index.html">Головна</a>
+    <p><a href="index.html">Go back</a></p>
     <ul id="ingredients"></ul>
     <a href="task-01.html">До task-01</a>
     <a href="task-03.html">До task-03</a>
