--- a/task-08.html
+++ b/task-08.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/hw-06.css" />
   </head>
   <body>
-    <a href="index.html">Головна</a>
+    <p><a href="index.html">Go back</a></p>
 <form class="login-form">
   <label>
     Email
