--- a/task-01.html
+++ b/task-01.html
@@ -38,7 +38,7 @@
         </ul>
       </li>
     </ul>
-    <a href="/">До task-02</a>
-   <script src="js/task-01.js" type="module"></script>
+    <a href="task-02.html">До task-02</a>
+    <script src="js/task-01.js" type="module"></script>
   </body>
 </html>
