--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <li><a href="task-08.html">Task 8</a></li>
       <li><a href="task-09.html">Task 9</a></li>
       <li><a href="task-10.html">Task 10</a></li>
+      <li><a href="calculator.html">calculator</a></li>
+      <li><a href="snake.html">snake</a></li>
+      <li><a href="vin.html">vin</a></li>
     </ul>
-
   </body>
 </html>
